--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -24,22 +24,22 @@ p {
 // Top Navigation
 // --------------------------------------------------
 .navigation-wrapper {
-	text-align: center;
+	text-align: left;
 	.clearfix();
 	ul {
 		display: inline-block;
 		vertical-align: top;
 		margin: 0 0 50px;
-		padding: 4px 20px;
+		padding: 32px 4px 15px 10px;
 		background-color: @nav-background-color;
-		.rounded(0 0 10px 10px);
+		.rounded(0 0 45px 0);
 		.clearfix();
 	}
 	li {
 		display: block;
 		float: left;
 		list-style: none;
-		text-align: center;
+		text-align: left;
 		.font-rem(14);
 		text-transform: uppercase;
 		color: @white;
@@ -61,6 +61,7 @@ p {
 #site-nav {
 	z-index: 9000;
 	display: none;
+	text-align: left;	//prevent covering logo
 	@media @medium {
 		-webkit-animation-duration: 1s;
 		-moz-animation-duration: 1s;
@@ -88,11 +89,14 @@ p {
 }	
 #nav-toggle { 
 	z-index: 9999;
+	color:#aaa;
+	text-align: left;
 	display: block;
+	position: absolute; // allow menu to overlap and provide background color
 	vertical-align: top;
 	margin: 0;
 	padding: 4px 20px;
-	background-color: @black;
+	background-color: transparent;
 	.rounded(0);
 	@media @medium {
 		display: none;
