--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,7 @@
 </style>
 
 <!-- Webfonts -->
-<script async src="//use.edgefonts.net/source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9.js"></script>
+<script async src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
 
 <meta http-equiv="cleartype" content="on">
 
