test deferred js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+<!-- Webfonts -->
+<script async src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} </span>
 
 <span class="contribution-credit">
