--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -6,6 +6,7 @@
 @caption-font: @base-font;
 @code-font: 'source-code-pro', monospace;
 @alt-font: 	@base-font;	//does not squish well on mobile/small: 	'Yanone Kaffeesatz', serif;
+//@alt-font: 'volkhov', serif;
 
 @doc-font-size: 16;
 @doc-line-height: 24;
