privacy page, angel.co link
font loading path corrected

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -442,6 +442,9 @@ span + .entry-title {
 		padding: 4px 8px;
 		&:hover { color:@black; }
 	}
+	a.image-icon {
+		display: inline-block;
+	}
 }
 
 // Chrome Frame
