--- a/assets/less/font-awesome.less
+++ b/assets/less/font-awesome.less
@@ -1,34 +1,17 @@
+
 /*!
- *  Font Awesome 3.2.0
- *  the iconic font designed for Bootstrap
- *  ------------------------------------------------------------------------------
- *  The full suite of pictographic icons, examples, and documentation can be
- *  found at http://fontawesome.io.  Stay up to date on Twitter at
- *  http://twitter.com/fontawesome.
- *
- *  License
- *  ------------------------------------------------------------------------------
- *  - The Font Awesome font is licensed under SIL OFL 1.1 -
- *    http://scripts.sil.org/OFL
- *  - Font Awesome CSS, LESS, and SASS files are licensed under MIT License -
- *    http://opensource.org/licenses/mit-license.html
- *  - Font Awesome documentation licensed under CC BY 3.0 -
- *    http://creativecommons.org/licenses/by/3.0/
- *  - Attribution is no longer required in Font Awesome 3.0, but much appreciated:
- *    "Font Awesome by Dave Gandy - http://fontawesome.io"
- *
- *  Author - Dave Gandy
- *  ------------------------------------------------------------------------------
- *  Email: dave@fontawesome.io
- *  Twitter: http://twitter.com/byscuits
- *  Work: Lead Product Designer @ Kyruus - http://kyruus.com
- */
+Font Awesome 3.2.0    http://fontawesome.io   
+  Font              SIL OFL 1.1 http://scripts.sil.org/OFL
+  CSS, LESS, SASS   MIT License
+  Author              Dave Gandy  dave@fontawesome.io   @byscuits
+*/
+
 /* FONT PATH
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('//netdna.bootstrapcdn.com/font-awesome/3.2.0/font/fontawesome-webfont.eot?v=3.2.0');
-  src: url('//netdna.bootstrapcdn.com/font-awesome/3.2.0/font/fontawesome-webfont.eot?#iefix&v=3.2.0') format('embedded-opentype'), url('//netdna.bootstrapcdn.com/font-awesome/3.2.0/font/fontawesome-webfont.woff?v=3.2.0') format('woff'), url('//netdna.bootstrapcdn.com/font-awesome/3.2.0/font/fontawesome-webfont.ttf?v=3.2.0') format('truetype'), url('//netdna.bootstrapcdn.com/font-awesome/3.2.0/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.0') format('svg');
+  src: url('/assets/fonts/fontawesome-webfont.eot?v=3.2.0');
+  src: url('/assets/fonts/fontawesome-webfont.eot?#iefix&v=3.2.0') format('embedded-opentype'), url('/assets/fonts/fontawesome-webfont.woff?v=3.2.0') format('woff'), url('/assets/fonts/fontawesome-webfont.ttf?v=3.2.0') format('truetype'), url('/assets/fonts/fontawesome-webfont.svg#fontawesomeregular?v=3.2.0') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -975,6 +958,15 @@ a .icon-flip-vertical:before {
 }
 .icon-linkedin:before {
   content: "\f0e1";
+}
+a [class^=icon-angelco],
+a [class*=" icon-angelco"]
+.icon-angelco {
+  display: inline-block;
+  width: 20px;
+  height: 30px;
+  vertical-align: text-bottom;
+  background: url('/images/angelco.png') no-repeat;
 }
 .icon-rotate-left:before,
 .icon-undo:before {
