test: does async edge fonts cause lost index.md content?

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@ Font Awesome 3.2.0    http://fontawesome.io
 </style>
 
 <!-- Webfonts -->
-<script async src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
+<script src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
 
 <meta http-equiv="cleartype" content="on">
 
