--- a/_includes/head.src.html
+++ b/_includes/head.src.html
@@ -37,7 +37,7 @@
 <link rel="stylesheet" href="../assets/css/main.uncss.css?__inline=true">
 
 <!-- Webfonts -->
-<script async src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
+<script src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
 
 <meta http-equiv="cleartype" content="on">
 
