grunt-uncss was stripping out navigation-wrapper
grunt-uncss was supposed to strip unused styles, but it stripped out
the navigation menu:
navigation-wrapper

--- a/_includes/head.src.html
+++ b/_includes/head.src.html
@@ -34,7 +34,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers. Stylesheets get pruned and inlined instead of blocking link tag. -->
-<link rel="stylesheet" href="../assets/css/main.uncss.css?__inline=true">
+<!--	//TODO: restore main.uncss.css	-->
+<link rel="stylesheet" href="../assets/css/main.min.css?__inline=true">
 
 <!-- Webfonts -->
 <script src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
