Nav padding fix. Edit yml (trigger github rebuild)

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -30,7 +30,7 @@ p {
 		display: inline-block;
 		vertical-align: top;
 		margin: 0 0 50px;
-		padding: 0px 4px 10px 10px;
+		padding: 0px .75em 10px 10px;
 		background-color: @nav-background-color;
 		border-top: 0px solid @nav-background-color;
 		.rounded(0 0 35px 0);
