--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,11 +10,10 @@
 				{% endif %} 
 			</li>
 	        {% endfor %}
-<!-- //TODO:	        <li><a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="icon-rss"></i> Feed</a></li>	-->
 	        {% if site.search %}<li class="dosearch"><i class="icon-search"></i> Search</li>{% endif %}
 	    </ul>
 	</nav>
-</div><!-- /.navigation-wrapper -->
+</div>
 
 {% include browser-upgrade.html %}
 
@@ -22,9 +21,9 @@
 	<div class="search-form">
 		<input type="text" class="search-field" placeholder="Search...">
 		<i class="icon-remove-sign icon-2x"></i>
-		<ul class="search-results post-list"></ul><!-- /.search-results -->
-	</div><!-- /.search-form -->
-</div><!-- ./search-wrapper -->{% endif %}
+		<ul class="search-results post-list"></ul>
+	</div>
+</div>{% endif %}
 
 {% if page.image.feature %}<header class="masthead">
 	{% if site.logo != null %}
@@ -32,7 +31,7 @@
 			<a href="{{ site.url }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated bounceInDown"></a>
 		</div>
 	{% endif %}
-</header><!-- /.masthead -->
+</header>
 {% else %}<header class="masthead">
 	<div class="wrap">
         {% if site.logo != null %}
@@ -41,4 +40,4 @@
         <h1 class="site-title animated fadeIn"><a href="{{ site.url }}/">{{ site.title }}</a></h1>
 		<h2 class="site-description animated fadeIn" itemprop="description">{{ site.description }}</h2>
 	</div>
-</header><!-- /.masthead -->{% endif %}
+</header>{% endif %}
