--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@
 
 {% include navigation.html %}
 
-<div id="main" role="main">
+<main id="main" role="main">
   <article class="entry">
     {% if page.image.feature %}<img src="{{ site.url }}/images/{{ page.image.feature }}" class="entry-feature-image" alt="{{ page.title }}" {% if site.logo == null %}style="margin-top:0;"{% endif %}>{% if page.image.credit %}<p class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a>{% endif %}{% endif %}
     <div class="entry-wrapper">
@@ -20,18 +20,17 @@
       </header>
       <div class="entry-content">
         {{ content }}
-      </div><!-- /.entry-content -->
-    </div><!-- /.entry-wrapper -->
+      </div>
+    </div>
   </article>
-</div><!-- /#main -->
+</main>
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
     {% include footer.html %}
   </footer>
-</div><!-- /.footer-wrapper -->
+</div>
 
-{% include scripts.html %}          
-
+{% include scripts.html %}
 </body>
 </html>
