--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -27,11 +27,8 @@
 
 {% if page.image.feature %}<header class="masthead">
 	{% if site.logo != null %}
-		<div class="wrap">
-			<a href="{{ site.url }}/" class="site-logo" rel="home" title="{{ site.title }}"><img src="{{ site.url }}/images/{{ site.logo }}" width="200" height="200" alt="{{ site.title }} logo" class="animated bounceInDown"></a>
-		</div>
+		<!-- smaller logo for most pages -->	
 	{% endif %}
-</header>
 {% else %}<header class="masthead">
 	<div class="wrap">
         {% if site.logo != null %}
@@ -40,4 +37,5 @@
         <h1 class="site-title animated fadeIn"><a href="{{ site.url }}/">{{ site.corp.dba }}</a></h1>
 		<h2 class="site-description animated fadeIn" itemprop="description">{{ site.description }}</h2>
 	</div>
-</header>{% endif %}
+{% endif %}
+</header>
