--- a/assets/examples/fw/styles/main.scss
+++ b/assets/examples/fw/styles/main.scss
@@ -57,23 +57,21 @@ label {
 
 
 rect {
-	stroke: #fff;
-  //noinspection ALL,ProblematicWhitespace
-  &.parent {
-	  opacity: .5;
-	}
-	&:hover {
-	  opacity: 0;
-	}
+  stroke: #fff;
+  &:hover {
+	cursor: pointer;
+  }
 }
 
 .children {
   rect {
 	&.parent {
-	  cursor: pointer;
-	  opacity: .5;
+	  fill: none;
 	}
-	&.child { opacity: 1; }
+	&.child { 
+	  opacity: 1;
+	  fill-opacity: 1;
+	}
   }
 }
 
@@ -86,3 +84,16 @@ text {
   }
 }
 
+  
+.health-care { fill: #fb8072 }
+.telecommunication-services { fill: #BEB9DB }
+.financials {fill: #B2E061 }
+.materials {fill: #8BD3C7 }
+.industrials { fill: #80b1d3 }
+.information-technology { fill: #FFB55A }
+.consumer-discretionary { fill: #d9d9d9 }
+.consumer-staples { fill: #FDCCE5}
+.utilities {fill: #CCEBC5 }
+.energy { fill: #FFFFAF}
+
+polygon.sector.allocation { fill: #aaaaaa;}
