data and style adjustments

--- a/assets/examples/fw/styles/main.scss
+++ b/assets/examples/fw/styles/main.scss
@@ -49,6 +49,7 @@ label {
   margin: 10px;
   font-size: 12px;
   width: 1000px;
+  height: 30px;
   text {
     font-weight: 400;
     letter-spacing: .02em;
