Styling changes to accommodate varied content

--- a/assets/less/_mixins.less
+++ b/assets/less/_mixins.less
@@ -296,6 +296,8 @@ overflow: visible; }
 // MEDIA QUERIES
 // --------------------------------------------------
 
+@forcepadding:       ~"only screen and (max-width: 659px)";
+
 @small:       ~"only screen and (min-width: 30em)";
 @medium:      ~"only screen and (min-width: 48em)";
 @large:       ~"only screen and (min-width: 62.5em)";
