--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -8,6 +8,8 @@
 @import "reset.less";
 // Variables and mixins =======================================
 @import "variables.less";
+// MIXINS =====================================================
+@import "_mixins.less";
 // Site wide styles (html, body, global classes) ==============
 @import "site.less";
 // TYPOGRAPHY =================================================
@@ -16,8 +18,6 @@
 @import "pygments.less";
 // Coderay Syntax highlighting ===============================
 @import "coderay.less";
-// MIXINS =====================================================
-@import "mixins.less";
 @import "grid.less";
 // ELEMENTS ===================================================
 // Figures, images, social media, other elements ==============
@@ -29,3 +29,4 @@
 // LAYOUT =====================================================
 // Page level layout styles ===================================
 @import "page.less";
+@import "examples.less";
