--- a/_layouts/examples.html
+++ b/_layouts/examples.html
@@ -7,21 +7,26 @@
 {% include head.html %}
 </head>
 
-<body id="page">
+<body id="examples">
 
 {% include navigation.html %}
 
-<main id="main" role="main">
+<main id="main" role="main" class="examples">
   <article class="entry">
+    {% if page.image.feature %}
+      <img src="{{ site.url }}/assets/{{page.permalink}}{{ page.image.feature }}" class="entry-feature-image" alt="{{ page.title }}" {% if site.logo == null %}style="margin-top:0;"{% endif %}>
+      {% if page.image.caption %}
+        <p class="image-caption"><a href="{{ page.image.creditlink }}">{{ page.image.caption }}</a>
+      {% endif %}
+      {% if page.image.credit %}
+        <p class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a>
+      {% endif %}
+    {% endif %}
     <div class="entry-wrapper">
       <header class="entry-header">
         <h1 class="entry-title">{% if page.headline %}{{ page.headline }}{% else %}{{ page.title }}</h1>{% endif %}
       </header>
-      <div class="entry-content">
-
-	<!-- include app/* -->
-        {{ content }}
-      </div>
+      {{ content }}
     </div>
   </article>
 </main>
