--- a/assets/less/examples.less
+++ b/assets/less/examples.less
@@ -1,24 +1,38 @@
+@import "_mixins.less";
 .portfolio-list {
-
+  text-transform: lowercase;
   ul {
     overflow: hidden;
-    padding: 1em;
+    padding: 1rem;
+    list-style-type: none;
   }
   li {
     float: left;
-    margin: 0.5em 0;
-    padding: 1em 1em 2em 1em;
+    margin: 0.5rem 0;
+    padding: 1rem 1rem 2rem 1rem;
     text-align: center;
-    width: 33.3%;
+
+    @media @medium {
+      width: 46%;
+      min-height: 738px;
+    }
+    
+    .tags {
+      font-size: .85rem;
+      opacity: .5;
+      text-transform: lowercase;
+    }
 
     a {
+      text-decoration: none;
       -webkit-box-shadow: 0px 3px 2px -2px rgba(0, 0, 0, 0);
       -moz-box-shadow: 0px 3px -2px 0 rgba(0, 0, 0, 0);
       box-shadow: 0px 2px 3px -2px rgba(0, 0, 0, 0);
       color: inherit;
       display: block;
+      font-size: 1.2rem;
       font-weight: 400;
-      padding: 1em 0 2em 0;
+      padding: 1rem 0 2rem 0;
       -webkit-transition: all 0.3s ease;
       -moz-transition: all 0.3s ease;
       -ms-transition: all 0.3s ease;
