cleaned up build, inlined more files

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -27,7 +27,7 @@ body {
 @border-color    		: @base-color;
 @white           		: #fff;
 @black           		: #000;
-@accent-color    		: #3D9733;	//This is the GFI brand color. was @black in theme.
+@accent-color    		: #3D9733;	//This is the GIG brand color.
 @nav-background-color   : #3D9733;
 @link-color 		    : #222;
 
