--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,11 +15,11 @@
       {% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github fa-2x"></i></a>{% endif %}
       {% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" title="{{ site.owner.name}} on Tumblr" target="_blank"><i class="fa fa-tumblr fa-2x"></i></a>{% endif %}
       <span class="contribution-credit">
-        <a href="//privacy/">Privacy</a>
+        <a href="/privacy/">Privacy</a>
       </span>
     </div>
   </footer>
 </div>
 
-<script defer src="../assets/js/scripts.min.js?__inline=true"></script>
+<script async defer src="../assets/js/scripts.min.js?__inline=true"></script>
 
