--- a/.src/_layouts/examples.html
+++ b/.src/_layouts/examples.html
@@ -1,4 +1,3 @@
-<html>
 {% include head.html %}
 
 <body id="examples">
@@ -29,4 +28,4 @@
 {% include footer.html %}
 {% include scripts.html %}
 </body>
-</html>
+{% include endhtml.html %}
