--- a/.src/_layouts/page.html
+++ b/.src/_layouts/page.html
@@ -1,8 +1,6 @@
-<html>
 {% include head.html %}
 
-  <body id="page">
-  
+<body id="page">
   {% include navigation.html %}
   
   <main id="main" role="main">
@@ -18,9 +16,7 @@
       </div>
     </article>
   </main>
-  
-  
   {% include footer.html %}
   {% include scripts.html %}
 </body>
-</html>
+{% include endhtml.html %}
