--- a/.src/assets/less/examples.less
+++ b/.src/assets/less/examples.less
@@ -3,7 +3,7 @@
 @import "_mixins.less";
 
 .portfolio-list {
-  text-transform: lowercase;
+  font-size: 1.2rem;
   ul {
     overflow: hidden;
     padding: 1rem;
@@ -15,10 +15,23 @@
     padding: 1rem 1rem 2rem 1rem;
     text-align: center;
 
+    &.width-double {
+      width: 100%;
+      clear: both;
+      img {
+        margin: .55rem 0 .75rem 0;
+        width: 93.7%
+      }
+    }
     @media @medium {
       width: 46%;
+      &.width-double {
+        img {
+          max-width: 2120px;
+        }
+      }
     }
-    
+
     .tags {
       font-size: .85rem;
       opacity: .5;
