--- a/.src/assets/less/main.less
+++ b/.src/assets/less/main.less
@@ -8,10 +8,11 @@
 @import "site.less";
 // TYPOGRAPHY =================================================
 @import "typography.less";
+@import "css-flip.less";
 // Pygments Syntax highlighting ===============================
-@import "pygments.less";
+//@import "pygments.less";
 // Coderay Syntax highlighting ===============================
-@import "coderay.less";
+//@import "coderay.less";
 @import "grid.less";
 // ELEMENTS ===================================================
 // Figures, images, social media, other elements ==============
