manual tweaks for accessibility and hosting at zeit

--- a/.src/assets/js/plugins/responsive-nav.css
+++ b/.src/assets/js/plugins/responsive-nav.css
@@ -10,7 +10,7 @@
   background: url(/images/summer_field_1920x1170_progressive.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-blend-mode: lighten;
+  background-blend-mode: soft-light;
   background-color: #333;
   background-position-y: 41%;
   background-position-x: 0;
