--- a/.src/_includes/uncess-ignore.html
+++ b/.src/_includes/uncess-ignore.html
@@ -45,7 +45,7 @@
   <span class="closed"></span>
   <span class="fadeInUp"></span>
   <div class="fa fa-reorder fa fa-2x"></div>
-  
+
 <!-- NAV mobile / contracted -->
 <div class="navigation-wrapper">
   <a href="#" id="nav-toggle" aria-hidden="false"><i class="fa fa-reorder"></i> Menu</a>
@@ -218,32 +218,32 @@
         </header>
         <div class="portfolio-list">
           <ul>
-            <li><a href="responsive/">Responsive eCommerce Web App
+            <li><a href="/examples/responsive/">Responsive eCommerce Web App
               <img src="//greenfieldinnovation.com/assets/examples/responsive/responsive-ecommerce.png" alt="" />
               <span class="tags">Ember, Handlebars, Elixir, Couchbase, Compare &amp; Buy</span>
             </a>
             </li>
-            <li><a href="driven-by-data/">Investment Allocation Map
+            <li><a href="/examples/driven-by-data/">Investment Allocation Map
               <img src="//greenfieldinnovation.com/assets/examples/driven-by-data/treemap.png" alt="Tree Map" />
               <span class="tags">d3, treemap, data visualization, native JavaScript</span>
             </a>
             </li>
-            <li><a href="lean/">Agile Software Development
+            <li><a href="/examples/lean/">Agile Software Development
               <img src="//greenfieldinnovation.com/assets/examples/lean/lean-agile-process-icon.png" alt="Lean, Agile Process" />
               <span class="tags">new product inception, i18n, brainstorming</span>
             </a>
             </li>
-            <li><a href="scalable/">Large scale event days
+            <li><a href="/examples/scalable/">Large scale event days
               <img src="//greenfieldinnovation.com/assets/examples/scalable/50M-giving-day.png" alt="" />
               <span class="tags">JSON api, native JavaScript</span>
             </a>
             </li>
-            <li><a href="secure/">Secure Portable Payment Form
+            <li><a href="/examples/secure/">Secure Portable Payment Form
               <img src="//greenfieldinnovation.com/assets/examples/secure/form-portable-thumb.png" alt="Secure Portable Payment Form" />
               <span class="tags">native JavaScript, jQuery, JSON api, automated data capture</span>
             </a>
             </li>
-            <li><a href="innovative/">single page application
+            <li><a href="/examples/innovative/">single page application
               <img src="//greenfieldinnovation.com/assets/examples/innovative/profileeditor.png" alt="" />
               <span class="tags">KnockoutJS, jQuery, JSON api, native JavaScript, </span>
             </a>
